# PRIVESC

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  README.md  main.py  pyproject.toml  requirements-web.txt  requirements.txt  setup.py
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-publish.yml
analysis/: __init__.py  attack_path_engine.py  compliance_mapper.py  diff_engine.py  engine.py  priority_engine.py
data/: export_6a6e2405.html  export_6a6e2405.txt  gtfobins.json  kernel_cves.json
intelligence/: threat_intel.py
modules/: __init__.py  capabilities_scanner.py  credential_scanner.py  cron_scanner.py  kernel_scanner.py  path_scanner.py  permission_scanner.py  service_scanner.py  suid_scanner.py  system_info.py
modules/windows/: __init__.py  windows_credential_scanner.py  windows_kernel_scanner.py  windows_path_scanner.py  windows_privilege_scanner.py  windows_registry_scanner.py  windows_service_scanner.py  windows_system_info.py  windows_task_scanner.py  windows_uac_scanner.py
output/: PrivEsc Report — attacker — 2026-04-12 02_06_47.html
remote/: __init__.py  ssh_scanner.py
reporter/: __init__.py  generator.py  html_generator.py  sarif_generator.py
tests/: test_analysis_engine.py  test_reporter.py  test_suid_scanner.py
web/: app.py
web/static/: index.html
